Made things more readable, fixed about section

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,3 +33,6 @@
 }
 
 // If IE support is needed you can add them here or create another stylesheet for specific IE fixes
+.topHeader {
+	background-color: rgba(59, 59, 59, 0.815);
+}
